--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.42",
-    "framer-motion": "^12.15.0",
-    "gsap": "^3.13.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@studio-freight/lenis": "^1.0.29",
+    "framer-motion": "^10.16.5",
+    "gsap": "^3.12.2",
+    "next": "^15.4.0-canary.59",
+    "next-themes": "^0.4.6",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
