--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@studio-freight/lenis": "^1.0.29",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
+    "lucide-react": "^0.511.0",
     "next": "^15.4.0-canary.59",
     "next-themes": "^0.4.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
